Test/typing/should_fail/private_attr.java
class A {
    private int attr;
}

public class B {
    public static void main(String[] args) {
        A a = new A();
        a.attr = 1;
    }
}